Implementacao controller